--- a/FragmentTest/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/FragmentTest/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-</android.support.constraint.ConstraintLayout>
+    <fragment
+        android:id="@+id/right_fragment"
+        android:name="com.zhang.fragmenttest.RightFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+</LinearLayout>
