--- a/FragmentTest/app/src/main/res/layout/another_right_fragment.xml
+++ b/FragmentTest/app/src/main/res/layout/another_right_fragment.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:background="#00ff00"
+    android:background="#ffff00"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -10,6 +10,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:textSize="20sp"
-        android:text="This is right fragment!"/>
+        android:text="This is another right fragment!"/>
 
 </LinearLayout>
